--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+           <form onsubmit="sendEmail();" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -377,6 +377,23 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+   <script src="https://smtpjs.com/v3/smtp.js"></script>
+
+  <script>
+      function sendEmail(){
+        Email.send({
+            Host : "smtp.elasticemail.com",
+            Username : "username",
+            Password : "password",
+            To : 'them@website.com',
+            From : "you@isp.com",
+            Subject : "This is the subject",
+            Body : "And this is the body"
+        }).then(
+          message => alert(message)
+        );
+      }
+  </script>
 
 </body>
 
