--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-           <form onsubmit="sendEmail();" method="post" role="form" class="php-email-form">
+           <form action="sendEmail();" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
